--- a/src/app/pages/depot-retrait/depot-retrait.component.html
+++ b/src/app/pages/depot-retrait/depot-retrait.component.html
@@ -1,25 +1,14 @@
 <div class="flex min-h-screen bg-gray-100">
 
   <!-- Sidebar -->
-  <aside class="w-64 h-screen fixed bg-black text-white px-6 py-8">
-    <h1 class="text-2xl font-bold text-orange-500 mb-10">MAX IT E221</h1>
-    <nav class="space-y-4">
-      <a routerLink="/dashboard" class="block px-3 py-2 hover:text-orange-500">Tableau de bord</a>
-      <a routerLink="/transfert" class="block px-3 py-2 hover:text-orange-500">Liste des transferts</a>
-      <a routerLink="/annulation" class="block px-3 py-2 hover:text-orange-500">Demandes d'annulation</a>
-      <a routerLink="/comptes" class="block px-3 py-2 hover:text-orange-500">Gestion des comptes</a>
-      <a routerLink="/depot-retrait" class="block px-3 py-2 bg-orange-500 rounded hover:text-white">Dépôt / Retrait</a>
-      <a routerLink="/achat-code" class="block px-3 py-2 hover:text-orange-500">Achat de code</a>
-      <a routerLink="/login" class="block px-3 py-2 bg-red-500 rounded hover:bg-red-600">Déconnexion</a>
-    </nav>
-  </aside>
+
 
   <!-- Contenu principal -->
-  <main class="flex-1 ml-64 p-10">
+  <main class="flex-1  p-10 space-y-8">
     <div class="max-w-2xl mx-auto bg-white rounded-xl shadow-lg p-6">
       <h2 class="text-xl font-bold mb-6 text-orange-500">Dépôt / Retrait</h2>
 
-      <form class="space-y-6">
+    <form class="bg-white p-6 rounded-lg shadow space-y-6">
         <!-- Montant -->
         <div>
           <label for="montant" class="block font-semibold mb-1">Montant</label>
