--- a/src/app/pages/gestion-comptes/gestion-comptes.component.html
+++ b/src/app/pages/gestion-comptes/gestion-comptes.component.html
@@ -1,20 +1,10 @@
 <div class="flex bg-gray-100 text-gray-800">
   <!-- Sidebar -->
-  <aside class="w-64 h-screen fixed bg-black text-white px-6 py-8">
-    <h1 class="text-2xl font-bold text-orange-500 mb-10">MAX IT E221</h1>
-    <nav class="space-y-4">
-      <a routerLink="/dashboard" class="block px-3 py-2 hover:text-orange-500">Tableau de bord</a>
-      <a routerLink="/transfert" class="block px-3 py-2 hover:text-orange-500">Liste des transferts</a>
-      <a routerLink="/annulation" class="block px-3 py-2 hover:text-orange-500">Demandes d'annulation</a>
-      <a routerLink="/comptes" class="block px-3 py-2 bg-orange-500 rounded">Gestion des comptes</a>
-      <a routerLink="/operations" class="block px-3 py-2 hover:text-orange-500">Dépôt / Retrait</a>
-      <a routerLink="/achat-code" class="block px-3 py-2 hover:text-orange-500">Achat de code</a>
-      <a routerLink="/login" class="block px-3 py-2 bg-red-500 rounded hover:bg-red-600">Déconnexion</a>
-    </nav>
-  </aside>
+
+  <div class="w-full max-w-6xl bg-white rounded-lg shadow-lg p-6">
 
   <!-- Main Content -->
-  <main class="ml-64 flex-1 p-10">
+  <main class="flex-1  p-10 space-y-8">
     <h2 class="text-2xl font-bold mb-6 text-orange-500">Gestion des Comptes</h2>
 
     <div class="overflow-x-auto">
@@ -59,16 +49,16 @@
       </table>
     </div>
 
+    
     <!-- Pagination -->
-    <div class="flex justify-between items-center mt-6 text-sm text-gray-600">
-      <div class="space-x-1">
-        <button class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">Précédent</button>
-        <button class="px-2 py-1 bg-orange-500 text-white rounded">1</button>
-        <button class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">2</button>
-        <button class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">3</button>
-        <button class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">4</button>
-        <button class="px-2 py-1 bg-gray-200 rounded hover:bg-gray-300">Suivant</button>
-      </div>
+    <div class="flex justify-center items-center mt-6 space-x-2 text-sm">
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">Précédent</button>
+      <button class="px-3 py-1 bg-orange-500 text-white rounded">1</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">2</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">3</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">4</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">Suivant</button>
     </div>
   </main>
+</div>
 </div>
