--- a/src/app/pages/transfert/transfert.component.html
+++ b/src/app/pages/transfert/transfert.component.html
@@ -1,21 +1,10 @@
 <div class="flex">
   <!-- Sidebar -->
-  <aside class="w-64 h-screen fixed bg-black text-white px-6 py-8">
-    <h1 class="text-2xl font-bold text-orange-500 mb-10">MAX IT E221</h1>
-      <hr class="border-white mb-6" />
-    <nav class="space-y-4 text-white">
-      <a href="#" class="block px-3 py-2 hover:text-orange-500">Tableau de bord</a>
-      <a routerLink="/transfert" class="block rounded bg-orange-500 px-3 py-2 mt-2">Liste des transferts</a>
-      <a href="#" class="block px-3 py-2 hover:text-orange-500">Demandes d'annulation</a>
-      <a href="#" class="block px-3 py-2 hover:text-orange-500">Gestion des comptes</a>
-      <a href="#" class="block px-3 py-2 hover:text-orange-500">Dépôt / Retrait</a>
-      <a href="#" class="block px-3 py-2 hover:text-orange-500">Achat de code</a>
-      <a routerLink="/login" class="block rounded bg-red-500 px-3 py-2">Déconnexion</a>
-    </nav>
-  </aside>
+
+  <div class="w-full max-w-6xl bg-white rounded-lg shadow-lg p-6">
 
   <!-- Contenu principal -->
-  <main class="flex-1 p-8 ml-64">
+  <main class="flex-1  p-10 space-y-8">
     <div class="max-w-5xl mx-auto bg-white rounded-lg shadow-lg p-6">
       <h1 class="text-3xl font-bold text-orange-500 mb-6">Liste des transferts</h1>
 
@@ -51,5 +40,15 @@
         </tbody>
       </table>
     </div>
+     <!-- Pagination -->
+    <div class="flex justify-center items-center mt-6 space-x-2 text-sm">
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">Précédent</button>
+      <button class="px-3 py-1 bg-orange-500 text-white rounded">1</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">2</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">3</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">4</button>
+      <button class="px-3 py-1 bg-gray-200 rounded hover:bg-gray-300">Suivant</button>
+    </div>
   </main>
+</div>
 </div>
