Description de tes nouvelles modifications

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,13 @@
     <hr class="border-white mb-6" />
     <nav class="space-y-4">
       <a routerLink="/accueil" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Accueil</a>
-    <!--<a routerLink="/dashboard" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Tableau de bord</a>-->
       <a routerLink="/historique" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Historique</a>
-      <a routerLink="/transfert" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Liste des transferts</a>
+      <a routerLink="/sous-comptes" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500"> Gestion Comptes</a>
+      <a routerLink="/transfert" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Effectuer un Transfert</a>
+      <a routerLink="/historique-transferts" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Historique des transferts</a>
       <a routerLink="/demandes-annulation" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Demandes d'annulation</a>
-      <a routerLink="/comptes" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Gestion des comptes</a>
-      <a routerLink="/depot-retrait" routerLinkActive="text-white bg-orange-500" class="block px-3 py-2 rounded">Dépôt / Retrait</a>
-      <a routerLink="/achat-code" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Achat de code</a>
+      <a routerLink="/paiement"routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Paiement Senelec</a>
+
       <a routerLink="/login" class="block px-3 py-2 bg-orange-500 rounded hover:bg-orange-600">Déconnexion</a>
     </nav>
   </aside>
