--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,39 @@
-<router-outlet></router-outlet>
+<div class="flex min-h-screen bg-gray-100">
+  <!-- Sidebar -->
+  <aside *ngIf="showSidebar" class="w-64 h-screen fixed bg-black text-white px-6 py-8">
+    <h1 class="text-2xl font-bold text-orange-500 mb-10">MAX IT E221</h1>
+    <hr class="border-white mb-6" />
+    <nav class="space-y-4">
+      <a routerLink="/accueil" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Dashboard</a>
+      <a routerLink="/historique" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Liste des  transactions</a>
+      <a routerLink="/comptes" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Gestion Comptes</a>
+      <a routerLink="/historique-transferts" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Liste des transferts</a>
+      <a routerLink="/demandes-annulation" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Demandes d'annulation</a>
+      <a routerLink="/paiement" routerLinkActive="text-orange-500" class="block px-3 py-2 hover:text-orange-500">Achat de code</a>
+    </nav>
+  </aside>
+
+  <!-- Contenu principal -->
+  <div [class.ml-64]="showSidebar" class="flex-1 flex flex-col">
+    
+   <!-- Navbar visible seulement si showSidebar est true -->
+    <header *ngIf="showSidebar" class="bg-orange-500 shadow h-16 flex items-center justify-end px-6">
+      <div class="relative">
+        <div (click)="toggleMenu()" class="cursor-pointer flex items-center space-x-2">
+          <span class="text-gray-100 font-medium">{{ nomUtilisateur }}</span>
+          <img src="assets/profil.png" alt="profil" class="w-8 h-8 rounded-full" />
+        </div>
+        <div *ngIf="showMenu" class="absolute right-0 mt-2 w-48 bg-white shadow-lg rounded-md py-2 z-50">
+          <button (click)="deconnexion()" class="block w-full text-left px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">Déconnexion</button>
+        </div>
+      </div>
+    </header>
+
+
+    <!--  Contenu dynamique -->
+    <main class="p-10 flex-1 overflow-y-auto">
+      <router-outlet></router-outlet>
+    </main>
+
+  </div>
+</div>
