--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -1,6 +1,6 @@
 <div
-  class="bg-white min-h-screen flex items-center justify-center bg-cover bg-no-repeat"
-  style="background-image: url('https://images.unsplash.com/photo-1581090700227-1e7e8246f3c4?auto=format&fit=crop&w=1400&q=80');"
+  class="bg-white min-h-screen flex items-center justify-center "
+ 
 >
   <div class="bg-black bg-opacity-80 p-8 rounded-xl max-w-md w-full text-white shadow-lg">
     <h1 class="text-3xl font-bold text-center text-orange-500 mb-2">MAX IT E221</h1>
