feat: modifications avant passage à main

--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -28,19 +28,19 @@
     <!-- Créer un sous-compte -->
     <button class="border border-gray-300 text-gray-800 hover:bg-gray-100 px-4 py-2 rounded w-full text-left"
       (click)="creerSousCompte()">
-      ➕ Créer un compte Sous Compte
+       Créer un compte Sous Compte
     </button>
 
     <!-- Bloquer un sous-compte -->
     <button class="border border-gray-300 text-gray-800 hover:bg-gray-100 px-4 py-2 rounded w-full text-left"
       (click)="bloquerSousCompte()">
-      ⛔ Bloquer un Sous Compte
+       Bloquer un Sous Compte
     </button>
 
     <!-- Changer un sous-compte en principal -->
     <button class="border border-gray-300 text-gray-800 hover:bg-gray-100 px-4 py-2 rounded w-full text-left"
       (click)="changerEnPrincipal()">
-      🔁 Changer un Sous Compte en Principal
+       Changer un Sous Compte en Principal
     </button>
 
   
